[gd_scene load_steps=2 format=3 uid="uid://b7xy38iegpn4m"]

[ext_resource type="Script" path="res://test.gd" id="1_e88t2"]

[node name="Websocket_Connection_Test" type="Node2D"]
script = ExtResource("1_e88t2")

[node name="JSON_Button" type="Button" parent="."]
offset_left = 145.0
offset_top = 366.0
offset_right = 503.0
offset_bottom = 514.0
text = "Send Data: {\"Foo\":{\"bar\":42}}
This should be OK"

[node name="String_Button" type="Button" parent="."]
offset_left = 628.0
offset_top = 364.0
offset_right = 986.0
offset_bottom = 512.0
text = "Send Data: \"foobar\"
This should cause an Internal Server Error"

[node name="Network_Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="JSON_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="String_Button" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Network_Timer" to="." method="_on_timer_timeout"]
